--BEGIN "ASYNC DNS"
2009-07-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signature.pm: new fetch_public_key method,
   which starts an asynchronous query for the public key
   referenced by this signature; redesign get_public_key to
   know how to complete the query

2009-07-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/PublicKey.pm: new fetch_async method: starts a
   query and returns a subref that when called will complete the
   query

2009-07-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DNS.pm: new query_async method: starts a query and
   returns a subref that when called will complete the query
--END "ASYNC DNS"

2009-12-14: Jason Long <jlong@messiah.edu>
 * MANIFEST: include sample_mime_lite.pl script in tarball

2009-09-08: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DNS.pm: restart timer after a DNS lookup; based on a
   patch contributed by Mark Martinec

 -- VERSION 0.37 --

2009-09-02: Jason Long <jlong@messiah.edu>
 * t/adsp.t: a test script for checking AuthorDomainPolicy.pm
 * lib/Mail/DKIM/AuthorDomainPolicy.pm: use d= tag not i= tag when
   checking for first-party signatures; fix for testing() method
   not found error; fix for "all" and "discardable" not doing the
   right thing
   
2009-08-14: Jason Long <jlong@messiah.edu>
 * sample_mime_lite.pl: a sample script showing how to use Mail::DKIM
   with MIME::Lite

2009-07-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Policy.pm: revert ability for subclasses to
   override behavior of no-results DNS query
 * lib/Mail/DKIM/AuthorDomainPolicy.pm: if ADSP record is not found,
   check whether the domain itself exists
 * t/policy.t: add a test for the ADSP record causing a DNS error
   but the domain itself still existing

2009-07-10: Jason Long <jlong@messiah.edu>
 * t/public_key.t: refine the testing for DNS timeouts and SERVFAIL
   errors
 * t/policy.t: add some tests for DNS failures during policy queries